--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,11 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 h1 {
-    font-family: 'Rubik Mono One', monospace;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 400;
 }
 h3 {
-    font-family: 'Rubik Mono One', monospace;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 200;
 }
 body {
