--- a/css/styles.scss
+++ b/css/styles.scss
@@ -55,6 +55,9 @@
                 line-height: 1.75rem;
                 padding-left: 1.35rem;
                 font-weight: 200;
+                .open-time {
+                    line-height: 1.5rem;
+                }
             }
 
             #copyLink {
@@ -166,6 +169,7 @@
                 line-height: 1.35rem;
                 color: rgb(110, 110, 110);
                 letter-spacing: 0.2px;
+                text-align: right;
             }
         }
 
@@ -235,12 +239,15 @@
     height: 8dvh;
 
     p {
-        font-size: .65rem;
         line-height: 1.5;
     }
 
     .copyright {
         display: none;
+    }
+
+    .webdev {
+        font-family: "Playwrite IS", cursive;
     }
 }
 
@@ -346,7 +353,7 @@
 
                 li {
                     padding: 1rem 0;
-                    font-size: 1.25rem;
+                    font-size: 1rem;
                 }
             }
         }
@@ -367,8 +374,17 @@
 
         #store-info {
             .info {
+                padding: 0.85rem 0;
                 p {
                     font-size: .85rem;
+                }
+                #copyLink {
+                    line-height: 1.5rem;
+                }
+                .info-content {
+                    .open-time {
+                        line-height: 1.25rem;
+                    }
                 }
             }
         }
@@ -398,16 +414,8 @@
             }
 
             #welcome-message {
-                .orange-font {
-                    font-size: .9rem;
-                    line-height: 1.5rem;
-                    padding: 1.5rem 1.75rem 1rem 1.75rem;
-                }
-
-                .gray-font {
-                    font-size: .8rem;
-                    line-height: 1.25rem;
-                    padding: 1rem 3rem;
+                .first-message {
+                    padding: 2rem 1rem 1rem 1rem;
                 }
             }
         }
@@ -416,7 +424,7 @@
             #map {
                 iframe {
                     width: 260px;
-                    height: 200px;
+                    height: 260px;
                 }
 
                 a {
@@ -433,9 +441,65 @@
     }
 
     #footer {
-        p {
+        .footer-copy {
             font-size: .65rem;
             line-height: .9rem;
+        }
+        .webdev {
+            font-size: 0.5rem;
+        }
+    }
+}
+
+@media screen and (min-width: 390px) and (max-width: 430px) {
+
+    #first-section {
+        gap: 3.75rem;
+
+        .store-name {
+            font-size: 2.75rem;
+            line-height: 3.5rem;
+            padding-top: calc(2rem + 8vh);
+
+            p {
+                font-size: .85rem;
+            }
+        }
+
+        #store-info {
+            .info {
+                p {
+                    font-size: .95rem;
+                }
+            }
+        }
+
+        #double-down {
+            img {
+                width: 11dvw;
+            }
+        }
+    }
+
+    #second-section {
+        #first-part {
+            #logo-intro {
+                margin-bottom: 2rem;
+            }
+
+            #images {
+                gap: .85rem;
+            }
+        }
+    }
+
+    #footer {
+        .footer-copy {
+            font-size: .65rem;
+            line-height: .9rem;
+        }
+        .webdev {
+            font-size: 0.55rem;
         }
     }
 }
@@ -622,6 +686,7 @@
 
                     h4 {
                         font-size: 1.25rem;
+                        font-family: 'Playwrite IS', cursive;
                     }
 
                     p {
@@ -714,15 +779,20 @@
 
                 h1 {
                     color: black;
-                    font-family: 'Ruda', sans-serif;
-                    font-weight: 600;
-                    font-size: 3.25rem;
-                    line-height: 4rem;
+                    font-family: "Playwrite IS", cursive;
+                    font-weight: 400;
+                    font-size: 2.75rem;
+                    line-height: 3.25rem;
 
                     #jcdbbq {
-                        font-family: 'Rubik Mono One', monospace;
-                        font-size: 3.75rem;
-                        letter-spacing: 1.25px;
+                        font-family: "Nunito Sans", sans-serif;
+                        font-size: 3rem;
+                        letter-spacing: 0.2px;
+                        background-color: rgba(0, 0, 0, 0.75);
+                        color: white;
+                        padding: 0 1rem;
+                        border-radius: 12px;
+                        margin-left: 0.5rem;
                     }
                 }
 
@@ -748,6 +818,7 @@
 
                 #welcome-title {
                     align-items: end;
+                    font-family: "Playwrite IS", cursive;
                 }
 
                 #icons {
@@ -815,8 +886,8 @@
 
             .hayeong:hover {
                 text-decoration: none;
-                color: rgb(255, 189, 108);
-                transition-duration: .6s;
+                color: rgb(232, 191, 255);
+                transition-duration: .4s;
             }
         }
     }
@@ -932,6 +1003,9 @@
             font-size: .75rem;
             line-height: 1.25rem;
         }
+        .webdev {
+            font-size: 0.5rem;
+        }
     }
 }
 
@@ -965,6 +1039,7 @@
                         width: 15vw;
                         font-size: 1.25rem;
                         color: white;
+                        font-family: "Playwrite IS", cursive;
                     }
                 }
             }
@@ -1117,15 +1192,20 @@
 
                 h1 {
                     color: black;
-                    font-family: 'Ruda', sans-serif;
-                    font-weight: 600;
+                    font-family: "Playwrite IS", cursive;
+                    font-weight: 400;
                     font-size: 2.75rem;
                     line-height: 3.25rem;
 
                     #jcdbbq {
-                        font-family: 'Rubik Mono One', monospace;
+                        font-family: "Nunito Sans", sans-serif;
                         font-size: 3rem;
-                        letter-spacing: 1.25px;
+                        letter-spacing: 0.2px;
+                        background-color: rgba(0, 0, 0, 0.75);
+                        color: white;
+                        padding: 0 1rem;
+                        border-radius: 12px;
+                        margin-left: 0.5rem;
                     }
                 }
 
