--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,5 @@
-@import './global';
-@import './variables';
+@import '/css/global';
+@import '/css/variables';
 
 .background {
     background: url('../images/JCD.jpg') center center fixed no-repeat;
