--- a/css/_global.scss
+++ b/css/_global.scss
@@ -8,7 +8,7 @@ html {
     scroll-snap-type: y mandatory;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100vh;
+    height: 100dvh;
     scroll-padding: 0;
 }
 body {
@@ -22,8 +22,8 @@ body {
     position: relative;
     background-color: whitesmoke;
     width: 100%;
-    height: 72vh;
-    margin-top: 8vh;
+    height: 72dvh;
+    margin-top: 8dvh;
     background-image: url('../images/Grill.png'); 
     background-repeat: repeat; 
     background-size: 100px 100px;
@@ -35,7 +35,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 72vh;
+    height: 72dvh;
     background: linear-gradient(90deg, transparent 500px, rgba(0, 0, 0, 0) 500px);
     pointer-events: none; 
 }
@@ -43,7 +43,7 @@ body {
     position: relative;
 }
 section {
-    width: 100vw;
+    width: 100dvw;
 }
 .flex {
     display: flex;
@@ -94,8 +94,8 @@ a {
     text-decoration: none;
 }
 #header-portrait {
-    height: 8vh;
-    width: 100vw;
+    height: 8dvh;
+    width: 100dvw;
     background-color: rgba(0, 0, 0, 0.65);
     border-bottom: 0.5px solid rgba(255, 255, 255, 0.85);
     position: fixed;
@@ -104,8 +104,8 @@ a {
     #nav-portrait {
         display: block;
         position: relative;
-        top: calc((8vh - 24px) / 2);
-        left: calc(100vw - 56px);
+        top: calc((8dvh - 24px) / 2);
+        left: calc(100dvw - 56px);
         z-index: 1;
         
         -webkit-user-select: none;
