--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Ruda:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+IS:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
+$sec-font: "Playwrite IS", cursive;
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Nunito Sans", sans-serif;
 }
 html {
     scroll-behavior: smooth;
@@ -15,6 +22,9 @@ body {
     text-align: center;
     z-index: -20;
 }
+h3 {
+    font-weight: 200;
+} 
 .body-black {
     background-color: black;
 }
