add "v=2" to clear cache of css

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -41,6 +41,7 @@
             width: 42dvw;
             padding: 1.5rem 0;
             font-size: 0.95rem;
+            color: white;
 
             .info-title {
                 text-align: center;
