--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Ruda:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playwrite+IS:wght@100..400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -109,18 +110,6 @@ section {
   justify-items: center;
 }
 
-.orange-font {
-  color: rgb(255, 68, 0);
-}
-
-.gray-font {
-  color: rgb(160, 160, 160);
-}
-
-h1, p {
-  color: white;
-}
-
 a {
   text-decoration: none;
 }
@@ -141,8 +130,7 @@ a {
   left: calc(100dvw - 56px);
   z-index: 1;
   -webkit-user-select: none;
-  -moz-user-select: none;
-       user-select: none;
+  user-select: none;
 }
 #header-portrait #nav-portrait input {
   width: 40px;
@@ -204,7 +192,6 @@ a {
   font-size: 1.25rem;
   color: black;
   font-weight: 400;
-  width: -moz-fit-content;
   width: fit-content;
   letter-spacing: 1px;
   display: inline-block;
@@ -273,6 +260,7 @@ a {
   width: 42dvw;
   padding: 1.5rem 0;
   font-size: 0.95rem;
+  color: white;
 }
 #first-section #store-info .info .info-title {
   text-align: center;
@@ -312,7 +300,6 @@ a {
 }
 #second-section #first-part #images {
   gap: 0.75rem;
-  width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
 }
@@ -407,7 +394,6 @@ a {
 #second-section #second-part #map a {
   color: white;
   margin: 0 auto;
-  width: -moz-fit-content;
   width: fit-content;
   background-color: #E94335;
   padding: 0.5rem 1.25rem;
@@ -493,9 +479,7 @@ a {
   font-size: 0.85rem;
 }
 #section-contact #open-hours {
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   margin: 1.5rem auto;
   line-height: 2rem;
@@ -884,8 +868,7 @@ a {
     padding-right: 5vw;
   }
   #second-section #second-part #welcome #icons img {
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     opacity: 0.25;
   }
   #second-section #second-part #welcome #icons #grill {
@@ -1147,7 +1130,6 @@ a {
     justify-content: space-between;
   }
   #second-section #second-part #welcome #texts {
-    width: -moz-fit-content;
     width: fit-content;
     margin: auto;
   }
@@ -1222,4 +1204,6 @@ a {
     color: rgb(255, 189, 108);
     transition-duration: 0.6s;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/*# sourceMappingURL=styles.css.map */
